--- a/pages/three/index.html
+++ b/pages/three/index.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: 阮志雄
+ * @Date: 2023-01-30 09:42:08
+ * @LastEditTime: 2023-01-30 17:29:16
+ * @LastEditors: 阮志雄
+ * @Description: In User Settings Edit
+ * @FilePath: \web-examples\pages\three\index.html
+-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -18,6 +26,7 @@
         <li data-src="./three-3bro.html"><a href="javascript:void(0)">萌3兄弟</a></li>
         <li data-src="./css3d_youtube.html"><a href="javascript:void(0)">css3d</a></li>
         <li data-src="./three-glb.html"><a href="javascript:void(0)">glb模型</a></li>
+        <li data-src="./particle.html"><a href="javascript:void(0)">例子效果</a></li>
       </ul>
     </nav>
     <section>
